2000-06-15  Dan Winship  <danw@helixcode.com>

	* providers/mbox/camel-mbox-folder.c (mbox_append_message): Fix to
	previous change: make sure the "seek" variable ends up with the
	value it should.

	* providers/mbox/camel-mbox-summary.c (summary_rebuild): Update
	summary mtime as well as size.

2000-06-14  Dan Winship  <danw@helixcode.com>

	* providers/mbox/camel-mbox-folder.c (mbox_append_message): if the
	mbox doesn't end with a '\n', write one before appending the new
	message.

2000-06-14  Jeffrey Stedfast  <fejj@helixcode.com>

	* camel-mime-filter-crlf.c (filter): Updated the encoder to allocate more
	memory (since we are also now adding dots). Also updated the decoder as we
	have found that it sometimes passes the end of the buffer.

	* providers/pop3/camel-pop3-folder.c (get_message_by_uid): Took out the
	filter code ( we already filter in camel_pop3_command_get_additional_data)

	* camel-folder.c (init): Updated: a separator is now a char* rather than
	a single char because IMAP can have a string for a directory separator.
	Also, since IMAP does not begin with a directory separator, there is a new
	argument (path_begins_with_sep) which decides if a directory should begin
	with a directory separator.

	* providers/imap/camel-imap-store.c (imap_create): Since, on connect,
	Camel tries to create INBOX (which already exists on every IMAP provider)
	we can return TRUE when the folder name is "INBOX".

	* providers/vee/camel-vee-folder.c (vee_init): Updated.

	* providers/imap/camel-imap-folder.c (camel_imap_folder_new): Updated.

	* providers/mbox/camel-mbox-store.c (get_folder): Updated.

	* providers/mbox/camel-mbox-folder.c (mbox_init): Updated.

	* providers/pop3/camel-pop3-folder.c (camel_pop3_folder_new): Updated.

2000-06-14  Dan Winship  <danw@helixcode.com>

	* providers/mbox/camel-mbox-summary.c (camel_mbox_summary_sync):
	Renamed from camel_mbox_summary_expunge. Takes a gboolean saying
	whether to expunge or just sync the mbox file. Change some